Header style changes

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 /* navigation */
 
 nav {
-	border-bottom: 1px solid black;
-	border-top: 1px solid black;
 	text-align: center;
 }
 
@@ -36,3 +34,9 @@ nav a:hover {
 	text-align: center;
 }
 
+#title {
+	font-weight: bold;
+	text-align:center;
+	width: inherit;
+	color: white;
+}
